fixed bug where nav links were wrapping with a small viewport

--- a/css/index.css
+++ b/css/index.css
@@ -170,14 +170,22 @@ nav h1 {
 }
 nav div {
   display: flex;
-  justify-content: space-evenly;
-  margin: 20px 75px;
+  justify-content: center;
+  margin: 20px auto;
+  width: 100%;
 }
 nav div a {
   font-size: 1.6rem;
   text-decoration: none;
   color: black;
   padding-right: 15px;
+  padding-left: 15px;
+}
+@media (max-width: 500px) {
+  nav div a {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
 }
 nav div a:hover {
   text-decoration: underline;
@@ -251,7 +259,7 @@ footer {
 @media (max-width: 500px) {
   .home .walk {
     flex-wrap: wrap;
-    padding: 20px 20px;
+    padding: 20px 10px;
     margin-top: 20px;
   }
 }
