--- a/less/home-page.less
+++ b/less/home-page.less
@@ -70,7 +70,7 @@
 
     @media @mobile {
       flex-wrap: wrap;
-      padding: 20px 20px;
+      padding: 20px 10px;
       margin-top: 20px;
     }
 
