--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,16 +8,22 @@ nav {
     }
 
     div {
-        // .test;
         display: flex;
-        justify-content: space-evenly;
-        margin: 20px 75px;
+        justify-content: center;
+        margin: 20px auto;
+        width: 100%;
 
         a {
             font-size: 1.6rem;
             text-decoration: none;
             color: black;
             padding-right: 15px;
+            padding-left: 15px;
+
+            @media @mobile {
+                padding-right: 10px;
+                padding-left: 10px;
+            }
             } 
         a:hover {
             text-decoration: underline;
